# rozet

./: .gitignore  .gitmodules  BUG_REPORT.md  BUILD_SUMMARY.md  DEV_PLAN.md  INSTALL.md  MANUAL_TESTING.md  MANUAL_TEST_PLAN.md  OPENCODE_PROVIDER_FIX_PLAN.md  OPENCODE_PROVIDER_FIX_SUMMARY.md  PHASE1_PROGRESS.md  QUICK_START.md  README_RUN.md  REPL_TEST_RESULTS.md  ROZET_REPL_PLAN.md  ROZET_SELF_BUILD_STRATEGY.md  ROZET_STATUS.md  START_HERE.md  STATUS.md  TESTING_SUMMARY.md  TEST_REAL_BUILD.md  claude.md  cursor.md  pyproject.toml  pytest.ini  requirements.txt  rozet  run.sh  run_orchestrator.sh
.opencode/: orchestrator_context.jsonl
agents/: bmad-architect.md  bmad-dev-backend.md  bmad-dev-frontend.md  bmad-pm.md  bmad-sm.md  compliance-security-auditor.md  course-content-tester.md  delight-engineer.md  duolingo-gamification-expert.md  edutech-devops-engineer.md  elearning-fullstack-engineer.md  lms-performance-optimizer.md  nursing-ux-designer.md  production-readiness-fixer.md
config/: providers.example.yaml  providers.yaml
control-room/: README.md
control-room/backend/: pyproject.toml
control-room/backend/src/control_room_api/: __init__.py  app.py  auth.py  config.py  database.py  models.py  observability.py  schemas.py  utils.py
control-room/backend/src/control_room_api/routers/: __init__.py  agents.py  operations.py  sessions.py  tasks.py
control-room/backend/tests/: test_sessions.py
docs/: cursor_mcp_setup.md  multi-agent-observability-summary.md  setup.md
files/: FRAMEWORK-SUMMARY.md  INDEX.md  INTEGRATION_GUIDE.md  PRACTICAL-EXAMPLE.md  QUICKSTART.md  QUICK_REFERENCE.md  README.md  SUMMARY.md  agent-composer.py  anti-laziness.md  behavior-settings.json  error-first-communication.md  humility-protocol.md  local-coder-agent.md  mcp-devtools.md  verification-loops.md
orchestrator/: HOW_TO_RUN.md  QUICK_START.md  README.md  TERMINOLOGY.md  TEST_PLAN.md  TUI_GUIDE.md  __init__.py  cli.py  (+4 more)
(+106 files in other folders)
