[project]
name = "rozet"
version = "0.1.0"
description = "Rozet orchestrator, OpenCode integration, and control-room backend"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "langchain>=0.3.10,<0.4.0",
  "langchain-openai==0.2.11",
  "langchain-google-genai==2.0.10",
  "langchain-anthropic>=0.1.28",
  "langchain-ollama>=0.1.0",
  "openai>=1.54.0,<2.0.0",
  "anthropic==0.34.1",
  "google-generativeai==0.8.3",
  "chromadb==0.5.5",
  "faiss-cpu>=1.9.0",
  "fastapi==0.115.5",
  "uvicorn[standard]==0.32.0",
  "pydantic==2.9.2",
  "sqlalchemy[asyncio]==2.0.35",
  "alembic>=1.13.1",
  "asyncpg>=0.29.0",
  "aiosqlite>=0.20.0",
  "python-jose[cryptography]>=3.3.0",
  "redis>=5.0.0",
  "orjson>=3.9.10",
  "python-dotenv==1.0.1",
  "requests==2.32.3",
  "httpx==0.27.2",
  "ollama>=0.4.0",
  "sentence-transformers==3.1.1",
  "PyYAML>=5.3",
  "rich>=13.0.0"
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0.0",
  "pytest-asyncio>=0.23.0",
  "pytest-cov>=5.0.0",
  "pytest-mock>=3.12.0",
  "ruff>=0.4.3",
  "black>=24.4.0"
]


